err.txt
    Checking once_cell v1.21.3
    Checking pin-project-lite v0.2.16
    Checking windows-link v0.2.1
    Checking regex-syntax v0.8.10
    Checking smallvec v1.15.1
    Checking anyhow v1.0.102
    Checking serde v1.0.228
    Checking log v0.4.29
    Checking windows-sys v0.61.2
    Checking cfg-if v1.0.4
    Checking lazy_static v1.5.0
    Checking foldhash v0.1.5
    Checking thread_local v1.1.9
    Checking tracing-core v0.1.36
    Checking sharded-slab v0.1.7
   Compiling zmij v1.0.21
    Checking libsqlite3-sys v0.31.0
    Checking fallible-iterator v0.3.0
    Checking fallible-streaming-iterator v0.1.9
    Checking hashbrown v0.15.5
    Checking bitflags v2.11.0
   Compiling serde_json v1.0.149
    Checking tracing v0.1.44
    Checking tracing-log v0.2.0
    Checking thiserror v1.0.69
    Checking itoa v1.0.17
    Checking memchr v2.8.0
    Checking wal-replicator v0.1.0 (C:\Users\yuvis\OneDrive\Desktop\Weekend\antigravity\titan-distributed-sqlite\crates\wal-replicator)
    Checking raft-core v0.1.0 (C:\Users\yuvis\OneDrive\Desktop\Weekend\antigravity\titan-distributed-sqlite\crates\raft-core)
    Checking snapshotter v0.1.0 (C:\Users\yuvis\OneDrive\Desktop\Weekend\antigravity\titan-distributed-sqlite\crates\snapshotter)
    Checking regex-automata v0.4.14
    Checking hashlink v0.10.0
    Checking nu-ansi-term v0.50.3
error[E0004]: non-exhaustive patterns: `&MessagePayload::InstallSnapshot(_)` and `&MessagePayload::InstallSnapshotReply(_)` not covered
   --> crates\raft-core\src\lib.rs:173:30
    |
173 |         let msg_term = match &msg.payload {
    |                              ^^^^^^^^^^^^ patterns `&MessagePayload::InstallSnapshot(_)` and `&MessagePayload::InstallSnapshotReply(_)` not covered
    |
note: `MessagePayload` defined here
   --> crates\raft-core\src\rpc.rs:49:10
    |
 49 | pub enum MessagePayload {
    |          ^^^^^^^^^^^^^^
...
 54 |     InstallSnapshot(InstallSnapshotArgs),
    |     --------------- not covered
 55 |     InstallSnapshotReply(InstallSnapshotReply),
    |     -------------------- not covered
    = note: the matched value is of type `&MessagePayload`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
    |
177 ~             MessagePayload::AppendEntriesReply(reply) => reply.term,
178 ~             &MessagePayload::InstallSnapshot(_) | &MessagePayload::InstallSnapshotReply(_) => todo!(),
    |

error[E0004]: non-exhaustive patterns: `MessagePayload::InstallSnapshot(_)` and `MessagePayload::InstallSnapshotReply(_)` not covered
   --> crates\raft-core\src\lib.rs:184:15
    |
184 |         match msg.payload {
    |               ^^^^^^^^^^^ patterns `MessagePayload::InstallSnapshot(_)` and `MessagePayload::InstallSnapshotReply(_)` not covered
    |
note: `MessagePayload` defined here
   --> crates\raft-core\src\rpc.rs:49:10
    |
 49 | pub enum MessagePayload {
    |          ^^^^^^^^^^^^^^
...
 54 |     InstallSnapshot(InstallSnapshotArgs),
    |     --------------- not covered
 55 |     InstallSnapshotReply(InstallSnapshotReply),
    |     -------------------- not covered
    = note: the matched value is of type `MessagePayload`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
    |
289 ~             },
290 +             MessagePayload::InstallSnapshot(_) | MessagePayload::InstallSnapshotReply(_) => todo!()
    |

For more information about this error, try `rustc --explain E0004`.
error: could not compile `raft-core` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
